Refactor: stream().toList() 적용으로 코드 간결화 및 불변성 보장
- getSortedLottos() 메서드에서 List 수집 방식을 .collect(Collectors.toList()) 대신 .toList()로 변경함.
- Java 16+의 toList()를 사용하여 불필요한 Collections.unmodifiableList() 호출 제거.
- 반환되는 리스트의 불변성을 명시적으로 보장하여 안전성을 높임.